--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
       crossorigin="anonymous"
     />
 
-    <!--<link rel="stylesheet" href="./css/reset.css" />-->
-
     <link rel="stylesheet" href="./css/style.css" />
 
     <title>Equipo Cabra</title>
@@ -28,15 +26,15 @@
   <body>
     <header class="header">
       <div class="nombredelequipo">
-        <h1 class="nombre">Nombre de equipo</h1>
+        <h1 class="nombre">Equipo Cabra</h1>
       </div>
 
       <nav class="enlaces">
-        <a href="./index.html#equipo" class="box">Equipo</a>
+        <a href="./index.html#equipo">Equipo</a>
 
-        <a href="./index.html#quienessomos" class="box">Quiénes somos</a>
+        <a href="./index.html#quienessomos">Quiénes somos</a>
 
-        <a href="./contacto.html" target="blank" class="box">Contacto</a>
+        <a href="./contacto.html" target="blank">Contacto</a>
       </nav>
     </header>
     <main class="cuerpo">
@@ -46,57 +44,52 @@
         </h2>
       </section>
       <section class="equipo1">
-        <h1 class="equipo">Equipo</h1>
+        <h1 id="equipo" class="equipo">Equipo</h1>
         <p class="textoequipo">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero
-          tenetur placeat id nemo, aut sed consequatur expedita eum ex
-          asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
-          tempore recusandae! Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Ipsam animi repellendus aperiam necessitatibus
-          iusto, possimus labore odio, nisi ut corporis ea suscipit repellat
-          praesentium. Culpa labore beatae possimus consequuntur optio.
+          Somos un equipo de desarrolladoras front-end. Estamos comprometidas
+          con nuestro trabajo para facilitar a los usuarios un buen rendimiento
+          de la página web. Además nos apoyamos unas en otras y siempre logramos
+          nuestros objetivos gracias a la perseverancia y la unión entre
+          nosotras.
         </p>
       </section>
       <section class="fortalezas">
-        <!--/IRENE/Falata redactar y solucionar el problema de la opacidad heredada-->
         <article class="articulo">
           <h2 class="title">Fortalezas</h2>
           <p class="parrafo">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
-            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
-            tempore
+            Trabajamos unidas gracias al compromiso y la búsqueda de soluciones
+            tratando los problemas con seriedad y tintes de humor, para ello
+            nuestra diversidad de trayectorias profesionales y experiencias de
+            vida han logrado fortalecernos y unirnos como equipo.
           </p>
         </article>
         <article class="articulo">
           <h2 class="title">Debilidades</h2>
           <p class="parrafo">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
-            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
-            tempore
+            Las debilidades de unas pueden ser las fortalezas de otras, así que
+            remando juntas como equipo podremos superarlas y para ello estamos
+            aprendiendo, gracias a Adalab, a suplir la poca experiencia que a
+            día de hoy tenemos en el sector de la programación front-end.
           </p>
         </article>
       </section>
 
-      <section class="quienessomos">
+      <section id="quienessomos" class="quienessomos">
         <h1>Quiénes somos</h1>
         <article class="description">
           <img class="photo" src="./images/FotoMai.jpg" alt="Foto Mai" />
 
           <h2 class="names">Maitane Abad</h2>
-          <!--descripción de Mai-->
           <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
-            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
-            tempore
+            Técnico de farmacia y parafarmacia, Community manager y futura
+            desarrolladora web. Mi objetivo con este curso es poder escribir,
+            diseñar y editar el contenido de una página web.
           </p>
 
           <div class="icons">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-github-alt"></i>
-            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter">·</i>
+            <i class="fab fa-github-alt">·</i>
+            <i class="fab fa-linkedin">·</i>
             <i class="fas fa-envelope-square"></i>
           </div>
         </article>
@@ -104,18 +97,18 @@
         <article class="description">
           <img class="photo" src="./images/foto Ana.jpg" alt="Foto Ana" />
           <h2 class="names">Ana Redondo</h2>
-          <!--descripción de Ana-->
           <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
-            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
-            tempore
+            Graduada social y futura programadora front-end. Mis objetivos son
+            disfrutar de esta nueva etapa superando el reto de dedicarme a una
+            actividad laboral totalmente distinta en la que el compañerismo sea
+            nuestra filosofía de trabajo. Para ello cuento con mi determinación
+            y la inestimable ayuda de mis compañeras "cabras".
           </p>
 
           <div class="icons">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-github-alt"></i>
-            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter">·</i>
+            <i class="fab fa-github-alt">·</i>
+            <i class="fab fa-linkedin">·</i>
             <i class="fas fa-envelope-square"></i>
           </div>
         </article>
@@ -127,18 +120,17 @@
             alt="Foto Paloma"
           />
           <h2 class="names">Paloma Lozano</h2>
-          <!--descripción de Paloma-->
           <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
-            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
-            tempore
+            Diseñadora gráfica y futura programadora web Front-end. Mis
+            objetivos son poder proporcionar a las personas una buena
+            experiencia, de manera visual y guiada, para que les parezca fácil
+            el uso de la web y sea accesible para todos.
           </p>
 
           <div class="icons">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-github-alt"></i>
-            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter">·</i>
+            <i class="fab fa-github-alt">·</i>
+            <i class="fab fa-linkedin">·</i>
             <i class="fas fa-envelope-square"></i>
           </div>
         </article>
@@ -146,18 +138,16 @@
         <article class="description">
           <img class="photo" src="./images/FotoIre.jpg" alt="Foto Irene" />
           <h2 class="names">Irene González</h2>
-          <!--descripción de Irene-->
           <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
-            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
-            tempore
+            Conservadora y Restauradora de Bienes Culturales, futura
+            programadora Front End en busca de un giro en mi trayectoria
+            profesional donde poder evolucionar.
           </p>
 
           <div class="icons">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-github-alt"></i>
-            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter">·</i>
+            <i class="fab fa-github-alt">·</i>
+            <i class="fab fa-linkedin">·</i>
             <i class="fas fa-envelope-square"></i>
           </div>
         </article>
@@ -167,8 +157,8 @@
     <footer class="footer">
       <h4 class="copy">Equipo Cabra &copy;2021</h4>
       <nav class="navegadorfooter">
-        <a href="./index.html#equipo">Equipo</a>
-        <a href="./index.html#quienessomos">Quiénes somos</a>
+        <a href="./index.html#equipo" target="top">Equipo</a>
+        <a href="./index.html#quienessomos" target="top">Quiénes somos</a>
         <a href="./contacto.html" target="blank">Contacto</a>
       </nav>
       <p>
