--- a/index.html
+++ b/index.html
@@ -77,21 +77,24 @@
 
       <section id="quienessomos" class="quienessomos">
         <h1>Quiénes somos</h1>
+
         <article class="description">
-          <img class="photo" src="./images/FotoMai.jpg" alt="Foto Mai" />
-
-          <h2 class="names">Maitane Abad</h2>
-          <p class="text">
-            Técnico de farmacia y parafarmacia, Community manager y futura
-            desarrolladora web. Mi objetivo con este curso es poder escribir,
-            diseñar y editar el contenido de una página web.
-          </p>
-
-          <div class="icons">
-            <i class="fab fa-twitter">·</i>
-            <i class="fab fa-github-alt">·</i>
-            <i class="fab fa-linkedin">·</i>
-            <i class="fas fa-envelope-square"></i>
+          <div>
+            <img class="photo" src="./images/FotoMai.jpg" alt="Foto Mai" />
+          </div>
+          <div>
+            <h2 class="names">Maitane Abad</h2>
+            <p class="text">
+              Técnico de farmacia y parafarmacia, Community manager y futura
+              desarrolladora web. Mi objetivo con este curso es poder escribir,
+              diseñar y editar el contenido de una página web.
+            </p>
+            <div class="icons">
+              <i class="fab fa-twitter">·</i>
+              <i class="fab fa-github-alt">·</i>
+              <i class="fab fa-linkedin">·</i>
+              <i class="fas fa-envelope-square"></i>
+            </div>
           </div>
         </article>
 
