--- a/index.html
+++ b/index.html
@@ -38,19 +38,21 @@
       </nav>
     </header>
     <main class="cuerpo">
-      <h2 class="hero">
+      <hero class="hero">
         Si quieres ir rápido, ve solo. Si quieres llegar lejos, ve acompañado.
-      </h2>
+      </hero>
 
       <section class="equipo1">
-        <h1 id="equipo" class="equipo">Equipo</h1>
-        <p class="textoequipo">
-          Somos un equipo de desarrolladoras front-end. Estamos comprometidas
-          con nuestro trabajo para facilitar a los usuarios un buen rendimiento
-          de la página web. Además nos apoyamos unas en otras y siempre logramos
-          nuestros objetivos gracias a la perseverancia y la unión entre
-          nosotras.
-        </p>
+        <article class="container.equipo">
+          <h1 id="equipo" class="equipo">Equipo</h1>
+          <p class="textoequipo">
+            Somos un equipo de desarrolladoras front-end. Estamos comprometidas
+            con nuestro trabajo para facilitar a los usuarios un buen
+            rendimiento de la página web. Además nos apoyamos unas en otras y
+            siempre logramos nuestros objetivos gracias a la perseverancia y la
+            unión entre nosotras.
+          </p>
+        </article>
       </section>
       <div class="rombo"></div>
       <section class="fortalezas">
