--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <section id="quienessomos" class="quienessomos">
         <h1>Quiénes somos</h1>
-        <article class="description">
+        <article class="description left">
           <img class="photo" src="./images/FotoMai.jpg" alt="Foto Mai" />
           <div class="box">
             <h2 class="names">Maitane Abad</h2>
@@ -96,7 +96,7 @@
           </div>
         </article>
 
-        <article class="description">
+        <article class="description right">
           <img class="photo" src="./images/foto Ana.jpg" alt="Foto Ana" />
           <div class="box">
             <h2 class="names">Ana Redondo</h2>
@@ -117,7 +117,7 @@
           </div>
         </article>
 
-        <article class="description">
+        <article class="description left">
           <img
             class="photo"
             src="./images/fotoperfilpaloma.jpg"
@@ -141,7 +141,7 @@
           </div>
         </article>
 
-        <article class="description">
+        <article class="description right">
           <img class="photo" src="./images/FotoIre.jpg" alt="Foto Irene" />
           <div class="box">
             <h2 class="names">Irene González</h2>
