change css description Paloma y Ana

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -78,7 +78,7 @@
 
       <section id="quienessomos" class="quienessomos">
         <h1>Quiénes somos</h1>
-        <article class="description">
+        <article class="description left">
           <img class="photo" src="./assets/images/FotoMai.jpg" alt="Foto Mai" />
           <div class="box">
             <h2 class="names">Maitane Abad</h2>
@@ -96,7 +96,7 @@
           </div>
         </article>
 
-        <article class="description">
+        <article class="description right">
           <img
             class="photo"
             src="./assets/images/foto Ana.jpg"
@@ -121,7 +121,7 @@
           </div>
         </article>
 
-        <article class="description">
+        <article class="description left">
           <img
             class="photo"
             src="./assets/images/fotoperfilpaloma.jpg"
@@ -145,7 +145,7 @@
           </div>
         </article>
 
-        <article class="description">
+        <article class="description right">
           <img
             class="photo"
             src="./assets/images/FotoIre.jpg"
