--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -53,39 +53,47 @@
     </header>
     <main class="main">
       <form class="" action="" method="post">
-        <label class="label" for="Name">Nombre completo *</label>
-        <input
-          class="form"
-          placeholder="Escribe tu nombre..."
-          type="text"
-          id="Name"
-          name="Name"
-        />
-        <label class="label" for="emailAddress">E-mail *</label>
-        <input
-          class="form"
-          placeholder="Escribe tu E-mail..."
-          type="email"
-          id="emailAddress"
-          name="emailAddress"
-        />
-        <label class="label" for="phone">Teléfono </label>
-        <input
-          class="form"
-          placeholder="Ej:123456789"
-          type="tel"
-          id="phone"
-          name="phone"
-        />
-        <label class="label" for="comments">Mensaje *</label>
-        <textarea
-          class="form"
-          id="comments"
-          name="comments"
-          rows="3"
-          cols="30"
-        ></textarea>
-        <input type="submit" value="Enviar" />
+        <div>
+          <label class="label" for="Name">Nombre completo *</label>
+          <input
+            class="form"
+            placeholder="Escribe tu nombre..."
+            type="text"
+            id="Name"
+            name="Name"
+          />
+        </div>
+        <div>
+          <label class="label" for="emailAddress">E-mail *</label>
+          <input
+            class="form"
+            placeholder="Escribe tu E-mail..."
+            type="email"
+            id="emailAddress"
+            name="emailAddress"
+          />
+        </div>
+        <div>
+          <label class="label" for="phone">Teléfono </label>
+          <input
+            class="form"
+            placeholder="Ej:123456789"
+            type="tel"
+            id="phone"
+            name="phone"
+          />
+        </div>
+        <div>
+          <label class="label" for="comments">Mensaje *</label>
+          <textarea
+            class="form"
+            id="comments"
+            name="comments"
+            rows="3"
+            cols="30"
+          ></textarea>
+        </div>
+        <input class="input type="submit" value="Enviar" />
       </form>
     </main>
     <footer class="footer">
