--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -85,13 +85,16 @@
         </div>
         <div>
           <label class="label" for="comments">Mensaje *</label>
-          <textarea
-            class="form"
+          <input
+            class="form_comment"
+            placeholder="¿Que necesitas?"
+            type="text"
             id="comments"
             name="comments"
-            rows="3"
-            cols="30"
-          ></textarea>
+            size="15"
+            maxlength="100"
+            
+          ></input>
         </div>
         <input class="input type="submit" value="Enviar" />
       </form>
