--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -39,7 +39,7 @@
       <section class="equipo1">
         <article class="container.equipo">
           <h1 id="equipo" class="equipo">Contacto</h1>
-          <p class="textoequipo">
+          <p class="textequip">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat
             tempora dolores quaerat exercitationem amet quos aliquid eveniet
             voluptates ex, natus similique recusandae ipsa voluptatem non
@@ -62,24 +62,24 @@
           />
         </div>
         <div>
-          <label class="label" for="emailAddress">E-mail *</label>
+          <label class="label" for="emailAddress">E-mail *
           <input
             class="form"
             placeholder="Escribe tu E-mail..."
             type="email"
             id="emailAddress"
             name="emailAddress"
-          />
+          /></label>
         </div>
         <div>
-          <label class="label" for="phone">Teléfono </label>
+          <label class="label" for="phone">Teléfono 
           <input
             class="form"
             placeholder="Ej:123456789"
             type="tel"
             id="phone"
             name="phone"
-          />
+          /></label>
         </div>
         <div>
           <label class="label" for="comments">Mensaje *</label>
@@ -94,7 +94,7 @@
             
           ></input>
         </div>
-        <input class="input type="submit" value="Enviar" />
+        <input class="input" type="submit" value="Enviar" />
       </form>
     </main>
     <footer class="footer">
