put in column tel and email

--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -46,50 +46,59 @@
             pariatur explicabo! Quisquam, dolor cupiditate?
           </p>
           <p class="campos">
-            Todos los campos con <span class="asterisk">*</span> son obligatorios.
+            Todos los campos con <span class="asterisk">*</span> son
+            obligatorios.
           </p>
         </article>
-      </section >
-      <section class="section2">
-      <form action="https://formspree.io/f/xoqykqvv" method="post">
-        
-          <label class="label" for="Name">Nombre completo <span class="asterisk">*</span> </label>
-          <input
-            class="form"
-            placeholder="Escribe tu nombre..."
-            type="text"
-            id="Name"
-            name="Name"
-          />
-          <label class="label" for="emailAddress">E-mail <span class="asterisk">*</span> 
-          <input
-            class="form" 
-            placeholder="Escribe tu E-mail..."
-            type="email"
-            id="emailAddress"
-            name="emailAddress"
+      </section>
+      <section>
+        <form
+          class="section2"
+          action="https://formspree.io/f/xoqykqvv"
+          method="post"
+        >
+          <label class="label" for="Name"
+            >Nombre completo <span class="asterisk">*</span>
+            <input
+              class="form"
+              placeholder="Escribe tu nombre..."
+              type="text"
+              id="Name"
+              name="Name"
+            />
+          </label>
+          <label class="label label2" for="emailAddress"
+            >E-mail <span class="asterisk">*</span>
+            <input
+              class="form"
+              placeholder="Escribe tu E-mail..."
+              type="email"
+              id="emailAddress"
+              name="emailAddress"
           /></label>
-          <label class="label" for="phone">Teléfono 
-          <input
-            class="form" 
-            placeholder="Ej:123456789"
-            type="tel"
-            id="phone"
-            name="phone"
+          <label class="label label3" for="phone"
+            >Teléfono
+            <input
+              class="form"
+              placeholder="Ej:123456789"
+              type="tel"
+              id="phone"
+              name="phone"
           /></label>
-          <label class="label " for="comments">Mensaje <span class="asterisk">*</span> </label>
-          <input
-            class="form_comment" 
-            placeholder="¿Que necesitas?"
-            type="text"
-            id="comments"
-            name="comments"
-            size="15"
-            maxlength="100"
-            
-          ></input>
-        <input class="input" type="submit" value="Enviar" />
-      </form></section>
+          <label class="label" for="comments"
+            >Mensaje <span class="asterisk">*</span>
+            <input
+              class="form_comment"
+              placeholder="¿Que necesitas?"
+              type="text"
+              id="comments"
+              name="comments"
+              size="15"
+              maxlength="100"
+          /></label>
+          <input class="input" type="submit" value="Enviar" />
+        </form>
+      </section>
     </main>
     <footer class="footer">
       <h4 class="footer__copy">Equipo Cabra &copy;2021</h4>
