--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -40,10 +40,8 @@
         <article class="containerequipo">
           <h1 id="equipo" class="equipo">Contacto</h1>
           <p class="textequip">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat
-            tempora dolores quaerat exercitationem amet quos aliquid eveniet
-            voluptates ex, natus similique recusandae ipsa voluptatem non
-            pariatur explicabo! Quisquam, dolor cupiditate?
+            Para consultas puedes completar el siguiente formulario y nos
+            pondremos en contacto contigo. Gracias.
           </p>
           <p class="campos">
             Todos los campos con <span class="asterisk">*</span> son
